// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Markdown> including a <Text> property 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "flex-start",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
      },
      Array [],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "color": "#f69a37",
        },
        Object {},
      ]
    }
  >
    Hello 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        Object {
          "fontStyle": "italic",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "color": "#f69a37",
        },
        Object {},
      ]
    }
  >
    World 
  </Text>
</View>
`;

exports[`<Markdown> renders 1`] = `
<View
  style={Array []}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        Object {},
      ]
    }
  />
</View>
`;

exports[`<Markdown> when combining * & ** 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "flex-start",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
      },
      Array [],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        Object {},
      ]
    }
  >
    hello 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        Object {
          "fontStyle": "italic",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        Object {},
      ]
    }
  >
    world, I'm 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        Object {
          "fontWeight": "bold",
        },
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        Object {},
      ]
    }
  >
    javi. 
  </Text>
</View>
`;

exports[`<Markdown> when including * 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "flex-start",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
      },
      Array [],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        Object {},
      ]
    }
  >
    hello 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        Object {
          "fontStyle": "italic",
        },
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        Object {},
      ]
    }
  >
    world 
  </Text>
</View>
`;

exports[`<Markdown> when including ** 1`] = `
<View
  style={
    Array [
      Object {
        "alignContent": "flex-start",
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "flex-start",
      },
      Array [],
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        Object {},
      ]
    }
  >
    hello 
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        Object {
          "fontWeight": "bold",
        },
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        Object {},
      ]
    }
  >
    world 
  </Text>
</View>
`;

exports[`<Markdown> when simple text 1`] = `
<View
  style={Array []}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        Object {},
      ]
    }
  >
    Hello World
  </Text>
</View>
`;
